# contextgraph

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  libtest_syntax.rmeta  rust-toolchain.toml
crates/context-graph-benchmark/: Cargo.toml
crates/context-graph-benchmark/benches/: comparative_suite.rs  scaling_analysis.rs
crates/context-graph-benchmark/scripts/: prepare_wikipedia.py
crates/context-graph-benchmark/src/: ablation.rs  config.rs  lib.rs  stress_corpus.rs  util.rs
crates/context-graph-benchmark/src/baseline/: mod.rs  single_embedder.rs  single_hnsw.rs
crates/context-graph-benchmark/src/causal_bench/: comparison.rs  data_loader.rs  metrics.rs  mod.rs  phases.rs  provider.rs  report.rs
crates/context-graph-benchmark/src/datasets/: beir_loader.rs  causal.rs  e11_entity.rs  embedder_impact.rs  generator.rs  graph_linking.rs  ground_truth.rs  mcp_intent.rs  mod.rs  multimodal.rs  topic_clusters.rs
crates/context-graph-benchmark/src/metrics/: causal.rs  clustering.rs  divergence.rs  e7_code.rs  e7_iou.rs  embedder_contribution.rs  graph_structure.rs  mcp_intent.rs  mod.rs  multimodal.rs  performance.rs  resource_usage.rs  retrieval.rs
crates/context-graph-benchmark/src/realdata/: config.rs  embedder.rs  ground_truth.rs  loader.rs  mod.rs  report.rs  results.rs  runner.rs  temporal_injector.rs
crates/context-graph-benchmark/src/reports/: json.rs  markdown.rs  mod.rs
crates/context-graph-benchmark/src/runners/: causal.rs  comparative.rs  e1_semantic.rs  embedder_impact.rs  graph_realdata.rs  mcp_intent.rs  mod.rs  multimodal.rs  retrieval.rs  scaling.rs  temporal.rs  topic.rs  unified_realdata.rs
crates/context-graph-benchmark/src/scaling/: corpus_builder.rs  degradation.rs  memory_profiler.rs  mod.rs
crates/context-graph-benchmark/src/tuning/: e7_tuning.rs  mod.rs
crates/context-graph-benchmark/src/validation/: ablation_validation.rs  arch_compliance.rs  asymmetric_validation.rs  config_validation.rs  e1_foundation.rs  fusion_validation.rs  ground_truth_validation.rs  mod.rs  temporal_validation.rs
crates/context-graph-causal-agent/: Cargo.toml
crates/context-graph-causal-agent/examples/: benchmark_causal.rs  benchmark_causal_enhanced.rs  benchmark_causal_large.rs
crates/context-graph-causal-agent/src/: error.rs  lib.rs
crates/context-graph-causal-agent/src/activator/: mod.rs
crates/context-graph-causal-agent/src/llm/: mod.rs  prompt.rs
crates/context-graph-causal-agent/src/scanner/: mod.rs
crates/context-graph-causal-agent/src/service/: mod.rs
crates/context-graph-causal-agent/src/types/: mod.rs
crates/context-graph-cli/: Cargo.toml
crates/context-graph-cli/benches/: cli_benchmarks.rs
crates/context-graph-cli/src/: main.rs  mcp_client.rs  mcp_helpers.rs
crates/context-graph-cli/src/commands/: divergence.rs  dream.rs  mod.rs  topic.rs  warmup.rs
crates/context-graph-cli/tests/e2e/: helpers.rs
crates/context-graph-cli/tests/integration/: helpers.rs  hook_lifecycle_test.rs  timeout_test.rs
crates/context-graph-core/: Cargo.toml  README.md
crates/context-graph-core/examples/: cognitive_pulse.rs  nvml_verify.rs  tree_sitter_test.rs
crates/context-graph-core/src/: error.rs  lib.rs  marblestone.rs  monitoring.rs
crates/context-graph-core/src/alignment/: calculator.rs  config.rs  error.rs  misalignment.rs  pattern.rs  score.rs  tests.rs
crates/context-graph-core/src/atc/: accessor.rs  domain.rs  mod.rs
crates/context-graph-core/src/autonomous/: autonomous_thresholds.rs  bootstrap.rs  drift.rs  workflow.rs
crates/context-graph-core/tests/: budget_fsv_test.rs  budget_manager_fsv_test.rs  embedder_fsv_test.rs  gwt_integration.rs  hdbscan_manual_test.rs  hyperbolic_walk_manual_test.rs  poincare_walk_manual_test.rs  topic_manual_test.rs  triggers_fsv_manual_test.rs  wake_controller_fsv_test.rs
crates/context-graph-cuda/: Cargo.toml  build.rs
crates/context-graph-cuda/src/: lib.rs  similarity.rs  stub.rs
crates/context-graph-cuda/tests/: cuda_cone_test.rs  cuda_poincare_test.rs
crates/context-graph-embeddings/: Cargo.toml
crates/context-graph-embeddings/src/: config.rs  document_embedder.rs  error.rs  global_provider.rs  lib.rs
crates/context-graph-embeddings/tests/: e9_typo_tolerance_test.rs  global_provider_fsv.rs  gpu_memory_slots_test.rs  no_fake_data_test.rs  physical_verification.rs  qodo_embed_integration.rs  task_emb_014_verification.rs  task_emb_016_physical_verification.rs
crates/context-graph-graph/: Cargo.toml  build.rs
crates/context-graph-graph-agent/: Cargo.toml
crates/context-graph-graph-agent/examples/: benchmark_graph.rs  benchmark_graph_code.rs  benchmark_graph_multi.rs
crates/context-graph-graph-agent/src/: error.rs  lib.rs  stubs.rs
crates/context-graph-graph/src/: config.rs  error.rs  lib.rs
crates/context-graph-graph/tests/: gpu_memory_tests.rs  integration.rs  integration_tests.rs  storage_tests.rs
crates/context-graph-mcp/: Cargo.toml
crates/context-graph-mcp/src/: handlers.rs  lib.rs  main.rs  monitoring.rs  protocol.rs  server.rs  tools.rs  weights.rs
crates/context-graph-ocr/: Cargo.toml
crates/context-graph-ocr/src/: chunker.rs  datalab.rs  docx.rs  image.rs  lib.rs  pdf.rs  types.rs  witness.rs
crates/context-graph-storage/: Cargo.toml  README.md
crates/context-graph-storage/benches/: causal_relationships_bench.rs  e11_quality_bench.rs
crates/context-graph-storage/examples/: marblestone_edges.rs
crates/context-graph-storage/src/: column_families.rs  indexes.rs  lib.rs  memex.rs  rocksdb_backend.rs  serialization.rs
crates/context-graph-storage/tests/: autonomous_integration.rs  e12_e13_source_of_truth_verification.rs  e9_storage_roundtrip_test.rs  full_integration_real_data.rs  full_state_verification.rs  purpose_vector_integration.rs  teleological_integration.rs
crates/context-graph-utl/: Cargo.toml
crates/context-graph-utl/benches/: surprise_bench.rs  utl_bench.rs
crates/context-graph-utl/src/: config.rs  error.rs  lib.rs  metrics.rs
crates/context-graph-utl/tests/: metrics_tests.rs  quality_gates.rs
(+1480 files in other folders)
