[package]
name = "context-graph-benchmark"
description = "Benchmarking suite comparing 13-embedder multi-space fingerprinting vs single-embedder RAG"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
test-utils = ["context-graph-core/test-utils"]
real-embeddings = [
    "dep:context-graph-embeddings",
    "dep:context-graph-mcp",
    "dep:context-graph-graph-agent",
    "dep:context-graph-causal-agent"
]

[dependencies]
# Internal crates
context-graph-core = { path = "../context-graph-core", features = ["test-utils"] }
context-graph-storage = { path = "../context-graph-storage" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# IDs and time
uuid = { workspace = true }
chrono = { workspace = true }

# Random number generation
rand = { workspace = true }
rand_chacha = "0.3"
rand_distr = { workspace = true }

# Statistics
statrs = "0.17"

# Hashing
md5 = "0.7"

# Optional: Real embeddings (GPU required)
context-graph-embeddings = { path = "../context-graph-embeddings", optional = true }

# Graph agent for causal discovery benchmarks
context-graph-graph-agent = { path = "../context-graph-graph-agent", optional = true }
context-graph-causal-agent = { path = "../context-graph-causal-agent", optional = true }

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Criterion for benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# TempDir for benchmark temp storage
tempfile = "3.10"

# MCP handlers for true MCP benchmark
context-graph-mcp = { path = "../context-graph-mcp", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[[bench]]
name = "comparative_suite"
harness = false

[[bench]]
name = "scaling_analysis"
harness = false

[[bin]]
name = "benchmark-report"
path = "src/bin/report.rs"

[[bin]]
name = "realdata-bench"
path = "src/bin/realdata_bench.rs"

[[bin]]
name = "gpu-bench"
path = "src/bin/gpu_bench.rs"

[[bin]]
name = "mcp-bench"
path = "src/bin/mcp_bench.rs"

[[bin]]
name = "embedder-stress"
path = "src/bin/embedder_stress.rs"

[[bin]]
name = "hf-bench"
path = "src/bin/hf_bench.rs"

[[bin]]
name = "temporal-bench"
path = "src/bin/temporal_bench.rs"

[[bin]]
name = "causal-realdata-bench"
path = "src/bin/causal_realdata_bench.rs"

[[bin]]
name = "temporal-realdata-bench"
path = "src/bin/temporal_realdata_bench.rs"

[[bin]]
name = "validation-bench"
path = "src/bin/validation_bench.rs"

[[bin]]
name = "sparse-bench"
path = "src/bin/sparse_bench.rs"

[[bin]]
name = "graph-bench"
path = "src/bin/graph_bench.rs"

[[bin]]
name = "multimodal-bench"
path = "src/bin/multimodal_bench.rs"

[[bin]]
name = "multimodal-realdata-bench"
path = "src/bin/multimodal_realdata_bench.rs"

[[bin]]
name = "mcp-intent-bench"
path = "src/bin/mcp_intent_bench.rs"

[[bin]]
name = "unified-realdata-bench"
path = "src/bin/unified_realdata_bench.rs"

[[bin]]
name = "graph-realdata-bench"
path = "src/bin/graph_realdata_bench.rs"

[[bin]]
name = "validation-realdata-bench"
path = "src/bin/validation_realdata_bench.rs"

[[bin]]
name = "e4-hybrid-session-bench"
path = "src/bin/e4_hybrid_session_bench.rs"

[[bin]]
name = "e1-semantic-bench"
path = "src/bin/e1_semantic_bench.rs"

[[bin]]
name = "e11-entity-bench"
path = "src/bin/e11_entity_bench.rs"

[[bin]]
name = "e7-realdata-bench"
path = "src/bin/e7_realdata_bench.rs"
required-features = ["real-embeddings"]

[[bin]]
name = "e7-bench"
path = "src/bin/e7_bench.rs"

[[bin]]
name = "code-fingerprint-bench"
path = "src/bin/code_fingerprint_bench.rs"
required-features = ["real-embeddings"]

[[bin]]
name = "e2-manual-verification"
path = "src/bin/e2_manual_verification.rs"
required-features = ["real-embeddings"]

[[bin]]
name = "weight-profile-bench"
path = "src/bin/weight_profile_bench.rs"

[[bin]]
name = "graph-linking-bench"
path = "src/bin/graph_linking_bench.rs"

[[bin]]
name = "embedder-impact-bench"
path = "src/bin/embedder_impact_bench.rs"

[[bin]]
name = "embedder-impact-realdata-bench"
path = "src/bin/embedder_impact_realdata_bench.rs"

[[bin]]
name = "causal-discovery-mcp-bench"
path = "src/bin/causal_discovery_mcp_bench.rs"
required-features = ["real-embeddings"]
