[package]
name = "context-graph-causal-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Causal relationship discovery agent using local LLM"

[features]
default = []
# Enable CUDA acceleration via llama-cpp-2 (RTX 5090 optimized)
cuda = ["llama-cpp-2/cuda"]
# Test mode: allows placeholder embeddings when CausalModel unavailable
# In production (without this feature), missing model = fail fast
test-mode = []

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true

# Internal crates
context-graph-core = { path = "../context-graph-core" }
context-graph-storage = { path = "../context-graph-storage" }
context-graph-embeddings = { path = "../context-graph-embeddings" }

# llama.cpp bindings for GGUF model inference with grammar constraints
# Uses GBNF grammar for 100% valid JSON output
llama-cpp-2 = "0.1"

# Async utilities
futures = "0.3"
parking_lot = "0.12"

# Regex for fallback parsing
regex = "1"

# SHA-256 hashing for prompt template provenance
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tracing-subscriber = "0.3"
