[package]
name = "context-graph-cli"
version = "0.1.0"
edition = "2021"
authors = ["Context Graph Team"]
description = "CLI tools for Context Graph session and topic coherence management"
license = "MIT"
repository = "https://github.com/contextgraph/contextgraph"
keywords = ["cli", "coherence", "topic", "context-graph"]

[[bin]]
name = "context-graph-cli"
path = "src/main.rs"

[dependencies]
context-graph-core = { path = "../context-graph-core" }
context-graph-mcp = { path = "../context-graph-mcp" }
context-graph-storage = { path = "../context-graph-storage" }
# TASK-HOOKS-011: Required for semantic search (--query flag)
context-graph-embeddings = { path = "../context-graph-embeddings" }

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Synchronization
parking_lot = "0.12"

# UUIDs for node ID parsing (TASK-HOOKS-011)
uuid = "1.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
futures = "0.3"
chrono = "0.4"
serial_test = "3"
# Enable test-utils for real data access in tests (NO MOCKS per spec)
context-graph-core = { path = "../context-graph-core", features = ["test-utils"] }
context-graph-storage = { path = "../context-graph-storage" }

# Performance benchmarking (TASK-P6-010)
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# Integration test configuration
[[test]]
name = "integration"
path = "tests/integration/mod.rs"

# E2E test configuration (executes real shell scripts)
# Run with: cargo test --package context-graph-cli --test e2e -- --test-threads=1 --nocapture
[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

# Performance benchmarks (TASK-P6-010)
# Run with: cargo bench --package context-graph-cli
[[bench]]
name = "cli_benchmarks"
harness = false

[features]
default = []
# context-graph-core doesn't have cuda feature, only context-graph-mcp does
# TASK-HOOKS-011: Added context-graph-embeddings/cuda for semantic search
cuda = ["context-graph-mcp/cuda", "context-graph-embeddings/cuda"]
# Apple Silicon Metal acceleration
metal = ["context-graph-mcp/metal", "context-graph-embeddings/metal"]
