[package]
name = "context-graph-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core domain types, traits, and business logic for Context Graph"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = "3.4"
thiserror.workspace = true
tracing.workspace = true
config.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
rand_distr.workspace = true
dashmap = "5.5"
bincode.workspace = true

# PII detection regex patterns for L1 Sensing Layer (SEC-01, SEC-02)
regex = "1.10"

# Real HNSW implementation - NO FALLBACKS
hnsw_rs = "0.3"

# Parallel batch comparisons (TASK-LOGIC-004: BatchComparator)
rayon = "1.10"

# Fast spinlock-based locking for wake_controller (TASK-17: TASK-PERF-005)
# parking_lot provides ~100-500ns lock times vs std::sync::RwLock ~1-5μs
parking_lot = "0.12"

# Real NVML GPU monitoring (TASK-23: NvmlGpuMonitor)
# Feature-gated to allow builds on systems without NVIDIA drivers
nvml-wrapper = { version = "0.10", optional = true }

[features]
default = []
# Enable test utilities (stubs, zeroed() methods) for downstream crate tests
# WARNING: Never enable this in production builds!
test-utils = []
# Enable real NVML GPU monitoring (requires NVIDIA drivers)
nvml = ["nvml-wrapper"]

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["test-util"] }
rand_chacha = "0.3"

[[example]]
name = "cognitive_pulse"
path = "examples/cognitive_pulse.rs"

[[example]]
name = "nvml_verify"
path = "examples/nvml_verify.rs"
required-features = ["nvml"]
