[package]
name = "context-graph-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core domain types, traits, and business logic for Context Graph"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = "3.4"
thiserror.workspace = true
tracing.workspace = true
config.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
rand_distr.workspace = true
dashmap = "5.5"
bincode.workspace = true

# RocksDB for Memory storage (TASK-P1-005: MemoryStore)
rocksdb = "0.22"

# PII detection regex patterns for L1 Sensing Layer (SEC-01, SEC-02)
regex = "1.10"

# SHA256 hashing for file content hashing (TASK-P1-004: TextChunker)
sha2 = "0.10"

# tree-sitter for AST-based code chunking (E7 Fine-Tuning Plan Phase 1)
# Uses cAST methodology: divide-and-combine with ~500 char target chunks
# Using 0.23 versions for ABI compatibility
tree-sitter = "0.23"
tree-sitter-rust = "0.23"

# Real HNSW implementation - NO FALLBACKS
hnsw_rs = "0.3"

# Parallel batch comparisons (TASK-LOGIC-004: BatchComparator)
rayon = "1.10"

# Fast spinlock-based locking for wake_controller (TASK-17: TASK-PERF-005)
# parking_lot provides ~100-500ns lock times vs std::sync::RwLock ~1-5μs
parking_lot = "0.12"

# Half-precision floating point for FP16 quantization (TASK-L03: E12 Quantization)
half = "2.3"

# Real NVML GPU monitoring (TASK-23: NvmlGpuMonitor)
# Feature-gated to allow builds on systems without NVIDIA drivers
nvml-wrapper = { version = "0.10", optional = true }

[features]
# Default includes NVML for RTX 5090 GPU monitoring
default = ["nvml"]
# Enable test utilities (stubs, zeroed() methods) for downstream crate tests
# WARNING: Never enable this in production builds!
test-utils = []
# Real NVML GPU monitoring (RTX 5090 required per Constitution)
nvml = ["nvml-wrapper"]

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["test-util"] }
rand_chacha = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "file_watcher_integration"
required-features = ["test-utils"]

[[test]]
name = "docs_manual_test"
required-features = ["test-utils"]

[[test]]
name = "source_metadata_integration"
required-features = ["test-utils"]

[[example]]
name = "nvml_verify"
path = "examples/nvml_verify.rs"
required-features = ["nvml"]

[[example]]
name = "tree_sitter_test"
path = "examples/tree_sitter_test.rs"
