[package]
name = "context-graph-cuda"
version = "0.1.0"
edition = "2021"
authors = ["Context Graph Team"]
description = "CUDA acceleration for Context Graph (RTX 5090 / Blackwell optimized)"
license = "MIT"
repository = "https://github.com/contextgraph/contextgraph"
keywords = ["cuda", "gpu", "neural", "context-graph"]

[dependencies]
context-graph-core = { path = "../context-graph-core" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID for memory IDs
uuid = { workspace = true }

# Float utilities for numerical stability
half = { version = "2.4", features = ["num-traits"] }

# GPU tensor operations for batched similarity (planned)
# TODO: Re-enable when candle-core supports CUDA 13.1 / compute capability 12.0
# candle-core = { version = "0.8", optional = true }
# candle-nn = { version = "0.8", optional = true }

[dev-dependencies]
tokio-test = "0.4"
# Enable test-utils for stubs access in tests (AP-007 compliant)
context-graph-core = { path = "../context-graph-core", features = ["test-utils"] }

[features]
default = []
cuda = []  # REQUIRED: RTX 5090 Blackwell CUDA support (candle integration pending CUDA 13.1 support)
# FAISS GPU support - requires FAISS rebuilt with CUDA 13.1+ and sm_120 support.
# Enable this ONLY after running: scripts/rebuild_faiss_gpu.sh
# This feature links against libfaiss_c.so and enables GPU vector indexing.
faiss-working = ["cuda"]
metal = []  # Marker feature for Metal-aware code paths

[build-dependencies]
# Future: cc = "1.0"
# Future: bindgen = "0.69"
