[package]
name = "context-graph-graph-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Graph relationship discovery agent using local LLM"

[features]
default = []
# Enable LLM backend for graph discovery (propagates to causal-agent).
# Without this feature, LLM module and service are not compiled.
llm = ["context-graph-causal-agent/llm"]
# Enable CUDA acceleration via llama-cpp-2 (RTX 5090 optimized)
cuda = ["llm", "context-graph-causal-agent/cuda"]
# Test utilities - provides stub constructors that panic on usage
# Use for tests that need Handlers but don't actually call graph discovery
test-utils = []
# Test mode: allows placeholder embeddings when GraphModel unavailable
# In production (without this feature), missing model = fail fast
test-mode = []

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true

# Internal crates
context-graph-core = { path = "../context-graph-core" }
context-graph-storage = { path = "../context-graph-storage" }
context-graph-embeddings = { path = "../context-graph-embeddings" }
context-graph-causal-agent = { path = "../context-graph-causal-agent" }

# Note: graph-agent uses CausalDiscoveryLLM from causal-agent (no direct llama-cpp-2 dependency)

# Async utilities
futures = "0.3"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tracing-subscriber = "0.3"
