[package]
name = "context-graph-graph"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Knowledge graph with FAISS GPU vector search and hyperbolic geometry"
license = "MIT"
repository = "https://github.com/contextgraph/contextgraph"
keywords = ["knowledge-graph", "faiss", "hyperbolic", "vector-search", "gpu"]

[features]
default = []
# Enable FAISS GPU support. Requires libfaiss_c to be installed on the system.
# Without this feature, GPU-related tests will be skipped.
faiss-gpu = []

[dependencies]
# Workspace crates
context-graph-core = { path = "../context-graph-core" }
context-graph-cuda = { path = "../context-graph-cuda" }
context-graph-embeddings = { path = "../context-graph-embeddings" }

# Storage
rocksdb = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.4"
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
static_assertions = "1.1"

# Logging
tracing = "0.1"
log = "0.4"

# IDs and time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# System info
num_cpus = "1.16"

# Async (for future use)
tokio = { version = "1.35", features = ["sync"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
tokio = { version = "1.35", features = ["full", "test-util"] }

[[bench]]
name = "benchmark_suite"
harness = false
path = "benches/benchmark_suite/main.rs"
