[package]
name = "context-graph-graph"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Knowledge graph with FAISS GPU vector search and hyperbolic geometry"
license = "MIT"
repository = "https://github.com/contextgraph/contextgraph"
keywords = ["knowledge-graph", "faiss", "hyperbolic", "vector-search", "gpu"]

[features]
# GPU is REQUIRED for production. No CPU fallback.
# Constitution Reference: stack.gpu, AP-007, ARCH-GPU-04
default = []
# FAISS GPU support. REQUIRED in production.
# Without this feature, compilation will FAIL with compile_error!
faiss-gpu = []
# Propagate faiss-working to context-graph-cuda for real FAISS FFI bindings.
# This enables actual GPU vector indexing via libfaiss_c.so.
# Enable ONLY after running: ./scripts/rebuild_faiss_gpu.sh
faiss-working = ["context-graph-cuda/faiss-working"]
# Enable CUDA acceleration (RTX 5090)
cuda = ["context-graph-cuda/cuda", "context-graph-embeddings/cuda"]
# Enable Metal acceleration (Apple Silicon)
metal = ["context-graph-cuda/metal", "context-graph-embeddings/metal"]

[dependencies]
# Workspace crates
context-graph-core = { path = "../context-graph-core" }
context-graph-cuda = { path = "../context-graph-cuda", optional = true }
context-graph-embeddings = { path = "../context-graph-embeddings" }

# Storage
rocksdb = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.4"
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
static_assertions = "1.1"

# Logging
tracing = "0.1"
log = "0.4"

# IDs and time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# System info
num_cpus = "1.16"

# Async (for future use)
tokio = { version = "1.35", features = ["sync"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
tokio = { version = "1.35", features = ["full", "test-util"] }
# Enable test-utils for stubs access in tests (AP-007 compliant)
context-graph-core = { path = "../context-graph-core", features = ["test-utils"] }

[[bench]]
name = "benchmark_suite"
harness = false
path = "benches/benchmark_suite/main.rs"
